<resources>

    <string name="app_name">FarepilotTechnicalChallenge</string>

    <string name="login_header">Login to your account</string>
    <string name="login_username">Username (email)</string>
    <string name="login_password">Password</string>
    <string name="login_login">Login</string>

    <string name="profile_username">Username:</string>
    <string name="profile_password">Password:</string>
    <string name="profile_password_hidden">(Password is too sensitive and should not be displayed)</string>

    <string name="profile_dialog_avatar_title">New Avatar</string>
    <string name="profile_dialog_avatar_camera">From Camera</string>
    <string name="profile_dialog_avatar_gallery">From Gallery</string>
</resources>